Welcome pages and 404

--- a/waiter/resources/web/consent.html
+++ b/waiter/resources/web/consent.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Waiter - Run Web App?</title>
+    <title>Run Web App? - Waiter</title>
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
     <style type="text/css">
    html {
