Feedback from @dposada and @shamsimam

--- a/waiter/resources/web/welcome.html
+++ b/waiter/resources/web/welcome.html
@@ -96,10 +96,10 @@
     Welcome to Waiter
   </h1>
   <p>
-    Waiter is a high-level platform for running and managing web services and applications.
+    Waiter is a platform for running and managing web services and applications.
   </p>
   <p>
-    See <a href="#gettinghelp">Getting Help</a> for more info, or if you feel you've reached this page in error.
+    See <a href="#gettinghelp">Getting Help</a> for more information.
   </p>
 </div>
 
