Feedback from @dposada

--- a/waiter/resources/web/error.html
+++ b/waiter/resources/web/error.html
@@ -132,6 +132,7 @@
   </div>
 </div>
 
+<% (when (seq support-info) %>
 <div class="additional-info">
   <div class="divider"></div>
   <div>
@@ -146,6 +147,7 @@
       <% ) %>
     </ul>
 </div>
+<% ) %>
 
 </body>
 
