--- a/waiter/resources/web/oauth.html
+++ b/waiter/resources/web/oauth.html
@@ -40,13 +40,7 @@
 if (location.hash) {
     var redirectLinks = document.getElementsByClassName('redirect');
     for (var i = 0; i < redirectLinks.length; i++) {
-        <% (when query-string %>
-            redirectLinks[i].href += "&_<%= hash-query-param-name %>=" + encodeURIComponent(location.hash);
-        <% ) %>
-        <% (when-not query-string %>
-            redirectLinks[i].href += "?_<%= hash-query-param-name %>=" + encodeURIComponent(location.hash);
-        <% ) %>
-
+        redirectLinks[i].href += "<%= (if query-string \& \?) %>_<%= hash-query-param-name %>=" + encodeURIComponent(location.hash);
     }
 }
 </script>
