Escapes HTML characters for error details

--- a/waiter/resources/web/error.html
+++ b/waiter/resources/web/error.html
@@ -128,7 +128,7 @@
   <div class="divider"></div>
   <div>
 	<h3>Additional Info</h3>
-	<pre id="details" class="code"><%= details %></pre>
+	<pre id="details" class="code"><%= (escape-html details) %></pre>
   </div>
 </div>
 
