Adds more details to error pages

--- a/waiter/resources/web/error.html
+++ b/waiter/resources/web/error.html
@@ -120,6 +120,21 @@
       <tr>
         <td class="field">Time</td><td class="code"><%= timestamp %></td>
       </tr>
+      <% (when principal %>
+      <tr>
+        <td class="field">Principal</td><td class="code"><%= principal %></td>
+      </tr>
+      <% ) %>
+      <% (when service-id %>
+      <tr>
+      <td class="field">Service Id</td><td class="code"><%= service-id %></td>
+      </tr>
+      <% ) %>
+      <% (when instance-id %>
+      <tr>
+      <td class="field">Instance Id</td><td class="code"><%= instance-id %></td>
+      </tr>
+      <% ) %>
     </table>
   </div>
 </div>
