simulator changes: - adds styling to forms - adds support for quanta

--- a/waiter/resources/web/sim.html
+++ b/waiter/resources/web/sim.html
@@ -98,6 +98,9 @@ textarea {
                 <h4>Scaler Settings</h4>
                 <label>scale every (secs) <input id="scale-ticks" value="5" type="number"/></label>
                 <label>simulation length (secs) <input id="total-ticks" value="3600" type="number"/></label>
+                <label>use quanta scaling <input id="use-quanta" checked type="checkbox"/></label>
+                <label>quanta cpus <input id="quanta-cpus" value="64" type="number"/></label>
+                <label>quanta memory (in MB) <input id="quanta-mem" value="524288" type="number"/></label>
             </div>
         </div>
         <div id="summary">
