fix scheme check to correctly determine initial request scheme. add another redirect to handle cors blocking the authenticated redirect directly to app

--- a/waiter/resources/web/authenticated-redirect.html
+++ b/waiter/resources/web/authenticated-redirect.html
@@ -4,7 +4,7 @@
     <title>Working...</title>
 </head>
 <body>
-<form action="<%= redirect-url %>" method="post">
+<form action="<%= auth-redirect-uri %>" method="post">
     <input type="hidden" name="saml-auth-data" value="<%= saml-auth-data %>">
     <noscript>
         <p>JavaScript is disabled. Click Continue to continue to your application.</p>
