--- a/waiter/resources/auth/authenticated-redirect.html
+++ b/waiter/resources/auth/authenticated-redirect.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-    <title>Working...</title>
+    <title>Redirecting to application...</title>
 </head>
 <body>
 <form action="<%= auth-redirect-uri %>" method="post">
     <input type="hidden" name="saml-auth-data" value="<%= saml-auth-data %>"/>
     <noscript>
-        <p>JavaScript is disabled. Click Continue to continue to your application.</p>
+        <p>JavaScript is disabled. Click "Continue" to continue to your application.</p>
         <input type="submit" value="Continue"/>
     </noscript>
 </form>
