Add support for multiple listening ports

--- a/waiter/resources/web/welcome.html
+++ b/waiter/resources/web/welcome.html
@@ -119,8 +119,8 @@
         <td class="code"><%= host %></td>
       </tr>
       <tr>
-        <td class="field">Port</td>
-        <td class="code"><%= port %></td>
+        <td class="field">Port(s)</td>
+        <td class="code"><%= ports %></td>
       </tr>
     </table>
     <p>
