--- a/waiter/resources/web/welcome.html
+++ b/waiter/resources/web/welcome.html
@@ -120,7 +120,7 @@
       </tr>
       <tr>
         <td class="field">Port(s)</td>
-        <td class="code"><%= ports %></td>
+        <td class="code"><%= port %></td>
       </tr>
     </table>
     <p>
