Add support for multiple listening ports (#944)
* Add support for multiple listening ports

* Use `port` for single and multiple ports

* Fix default settings

* whitespace

* More whitespace

--- a/waiter/resources/web/welcome.html
+++ b/waiter/resources/web/welcome.html
@@ -119,7 +119,7 @@
         <td class="code"><%= host %></td>
       </tr>
       <tr>
-        <td class="field">Port</td>
+        <td class="field">Port(s)</td>
         <td class="code"><%= port %></td>
       </tr>
     </table>
