--- a/waiter/resources/web/maintenance.html
+++ b/waiter/resources/web/maintenance.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Token in Maintenance Mode</title>
+    <title>"<%= token %>" in Maintenance Mode</title>
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
     <style type="text/css">
         html {
@@ -89,7 +89,7 @@
 
 <div class="main-content">
     <h1>
-        Token in Maintenance Mode
+        "<%= token %>" is Down For Maintenance
     </h1>
     <p>
         <%= message %>
